<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/points"
            android:id="@+id/resultView"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/submit"
            android:onClick="onSubmitClick"
            android:id="@+id/submitBT"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/QuestionName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/variable" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/radioGroup">

                    <RadioButton
                        style="@style/Answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1Answer1"
                        android:id="@+id/intField"/>

                    <RadioButton
                        style="@style/Answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1Answer2"
                        android:id="@+id/BooleanField"/>

                    <RadioButton
                        style="@style/Answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1Answer3"
                        android:id="@+id/stringField"/>
                </RadioGroup>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resultQ1"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:onClick="onResetClick"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/submitBT"
            android:layout_toStartOf="@+id/submitBT"/>
    </RelativeLayout>
</ScrollView>
